--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel ="stylesheet" href="styles.css"> <!--External CSS-->
+      <!--Internal CSS-->
+        <style>
+            p{
+              color: white;
+              background-color: green;
+              font-size: 50px;
+              font: weight 700px;
+            }
+        </style>
     <title>Methods for Adding CSS</title>
   </head>
   <body>
