--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,10 +9,9 @@
   </head>
   <body>
     <p class="red-highlight">Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
+    <div id="second">Number 2 - I'm one ID.</div>
     <p class="red-highlight">Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p class="red-highlight"e>Number 5 - I'm a class!</p>
-    <p>test</p>
+    <div id="fourth">Number 4 - I'm another ID.</div>
+    <p class="red-highlight">Number 5 - I'm a class!</p>
   </body>
 </html>
