--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="red-highlight">Number 1 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
     <div id="second">Number 2 - I'm one ID.</div>
-    <p class="red-highlight">Number 3 - I'm a class, but cooler!</p>
+    <p class="odd  oddcool">Number 3 - I'm a class, but cooler!</p>
     <div id="fourth">Number 4 - I'm another ID.</div>
-    <p class="red-highlight">Number 5 - I'm a class!</p>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
 </html>
