--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -10,12 +10,12 @@
   <body>
     <div class="header">
       <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
+        <li><a class="link" href="#">About</a></li>
+        <li><a class="link" href="#">Store</a></li>
       </ul>
       <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
+        <li><a class="link" href="#">Profile</a></li>
+        <li><a class="link" href="#">Settings</a></li>
       </ul>
     </div>
     <div class="content">
@@ -30,12 +30,12 @@
     </div>
     <div class="footer">
       <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
+        <li><a class="link" href="#">Advertising</a></li>
+        <li><a class="link" href="#">Business</a></li>
       </ul>
       <ul class="right-links">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
+        <li><a class="link" href="#">Privacy</a></li>
+        <li><a class="link" href="#">Terms</a></li>
       </ul>
     </div>
   </body>
